attCabecario-Form-Json

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,6 @@
 <nav class="nav">
-  <h1>Serjao Store</h1>
+
+  <img class="logo" routerLink="/" src="../../assets/images/logo.png" alt="image">
 
 
 
@@ -8,12 +9,14 @@
     <button>Pesquisar</button>
   </div>
   <ul>
+    <li><a routerLink="/">Home</a></li>
     <li><a href="#">Produtos</a></li>
     <li><a href="#">Contatos</a></li>
     <li><a href="#">Masculinos</a></li>
     <li><a href="#">Femininos</a></li>
 
     <li><a href="#">Login</a></li>
+    <li><a routerLink="/seller-auth">Vendedor</a></li>
     <li><a href="#">Carrinho (0)</a></li>
   </ul>
 
